kompose_projects/kompose_core_v1/src/kompose_core_v1/parser/DirectivesParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g 2010-07-08 17:06:29

package kompose_core_v1.parser;

import directives.*;
import directives.impl.DirectivesPackageImpl;

import kompose.*;
import kompose.impl.KomposePackageImpl;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class DirectivesParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRING_LITERAL", "UNION", "INTER", "LCURLY", "RCURLY", "CREATE", "AS", "DESTROY", "MERGE", "LP", "COMMA", "RP", "CONCAT", "EQUALS", "PLUS", "MINUS", "META_ID", "DOLLAR", "ID", "COL_COL", "DOT", "TRUE", "FALSE", "INT_LITERAL", "PRE", "POST", "ESC", "DIGIT", "WS", "SingleLineComment", "MultiLineComment", "'EXT'", "'MODE'", "'PM'", "'AM'", "'CM'", "'PMPre'", "'AMPre'", "'Post'"
    };
    public static final int DOLLAR=21;
    public static final int T__42=42;
    public static final int DESTROY=11;
    public static final int T__40=40;
    public static final int INT_LITERAL=27;
    public static final int T__41=41;
    public static final int SingleLineComment=33;
    public static final int CONCAT=16;
    public static final int RP=15;
    public static final int ESC=30;
    public static final int MERGE=12;
    public static final int LP=13;
    public static final int COL_COL=23;
    public static final int INTER=6;
    public static final int LCURLY=7;
    public static final int PRE=28;
    public static final int EQUALS=17;
    public static final int META_ID=20;
    public static final int MINUS=19;
    public static final int ID=22;
    public static final int EOF=-1;
    public static final int TRUE=25;
    public static final int UNION=5;
    public static final int AS=10;
    public static final int CREATE=9;
    public static final int WS=32;
    public static final int STRING_LITERAL=4;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int COMMA=14;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int RCURLY=8;
    public static final int POST=29;
    public static final int PLUS=18;
    public static final int DIGIT=31;
    public static final int DOT=24;
    public static final int FALSE=26;
    public static final int MultiLineComment=34;

    // delegates
    // delegators


        public DirectivesParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DirectivesParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return DirectivesParser.tokenNames; }
    public String getGrammarFileName() { return "/home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g"; }


      private static DirectivesFactory directives_factory = DirectivesPackageImpl.init().getDirectivesFactory();
      private static KomposeFactory kompose_factory = KomposePackageImpl.init().getKomposeFactory();
      
      public static void main(String[] args) throws Exception {
        DirectivesLexer lexer = new DirectivesLexer(new ANTLRFileStream("/home/mclavreu/main_workspace/kompose_directives/tests/kompose.kompt"));
        CommonTokenStream tokens = new CommonTokenStream(lexer);
        DirectivesParser parser = new DirectivesParser(tokens);
        try {
          parser.start();
        } catch (RecognitionException e) {
          // TODO Auto-generated catch block
          e.printStackTrace();
        }
      }
      public ArrayList<String> errors = new ArrayList<String>();
      public ArrayList<String> warnings = new ArrayList<String>();
      
      public boolean hasErrors() {
        return !errors.isEmpty(); 
      }
      
      public void reportError(RecognitionException ex) {
        super.reportError(ex);
        errors.add(ex.toString());
      }
      
      public String getString(ElementRef r) {
        if (r instanceof Literal){
          return ("\""+((Literal)r).toString()+"\"");
        }
        else {
          if (r instanceof PropRef){
            String s = getString(((PropRef)r).getObject());
            s += "::"+((PropRef)r).getProperty();
            return s;
          }
          else {
            if (r instanceof NameRef)
              return ((NameRef)r).getQname();
            else
              return "$"+((IDRef)r).getIdentifier();
          }
        }
      }



    // $ANTLR start "start"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:66:1: start returns [Context ctx = kompose_factory.createContext();] : 'EXT' ext= STRING_LITERAL ( 'MODE' ( UNION | INTER ) )? 'PM' pm= STRING_LITERAL 'AM' am= STRING_LITERAL 'CM' cm= STRING_LITERAL 'PMPre' LCURLY pmpre= directives RCURLY 'AMPre' LCURLY ampre= directives RCURLY 'Post' LCURLY post= directives RCURLY ;
    public final Context start() throws RecognitionException {
        Context ctx =  kompose_factory.createContext();;

        Token ext=null;
        Token pm=null;
        Token am=null;
        Token cm=null;
        ArrayList<ElementDirective> pmpre = null;

        ArrayList<ElementDirective> ampre = null;

        ArrayList<ElementDirective> post = null;



            System.out.println("Starting parser...");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:79:3: ( 'EXT' ext= STRING_LITERAL ( 'MODE' ( UNION | INTER ) )? 'PM' pm= STRING_LITERAL 'AM' am= STRING_LITERAL 'CM' cm= STRING_LITERAL 'PMPre' LCURLY pmpre= directives RCURLY 'AMPre' LCURLY ampre= directives RCURLY 'Post' LCURLY post= directives RCURLY )
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:80:3: 'EXT' ext= STRING_LITERAL ( 'MODE' ( UNION | INTER ) )? 'PM' pm= STRING_LITERAL 'AM' am= STRING_LITERAL 'CM' cm= STRING_LITERAL 'PMPre' LCURLY pmpre= directives RCURLY 'AMPre' LCURLY ampre= directives RCURLY 'Post' LCURLY post= directives RCURLY
            {
            match(input,35,FOLLOW_35_in_start69); 
            ext=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_start73); 
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:81:3: ( 'MODE' ( UNION | INTER ) )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==36) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:81:4: 'MODE' ( UNION | INTER )
                    {
                    match(input,36,FOLLOW_36_in_start78); 
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:81:11: ( UNION | INTER )
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==UNION) ) {
                        alt1=1;
                    }
                    else if ( (LA1_0==INTER) ) {
                        alt1=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 1, 0, input);

                        throw nvae;
                    }
                    switch (alt1) {
                        case 1 :
                            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:81:12: UNION
                            {
                            match(input,UNION,FOLLOW_UNION_in_start81); 
                            ctx.setMode(Modes.UNION);

                            }
                            break;
                        case 2 :
                            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:81:48: INTER
                            {
                            match(input,INTER,FOLLOW_INTER_in_start87); 
                            ctx.setMode(Modes.INTERSECTION);

                            }
                            break;

                    }


                    }
                    break;

            }

            match(input,37,FOLLOW_37_in_start96); 
            pm=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_start100); 
            match(input,38,FOLLOW_38_in_start104); 
            am=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_start108); 
            match(input,39,FOLLOW_39_in_start112); 
            cm=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_start116); 
            match(input,40,FOLLOW_40_in_start123); 
            match(input,LCURLY,FOLLOW_LCURLY_in_start125); 
            pushFollow(FOLLOW_directives_in_start129);
            pmpre=directives();

            state._fsp--;

            match(input,RCURLY,FOLLOW_RCURLY_in_start131); 
            match(input,41,FOLLOW_41_in_start135); 
            match(input,LCURLY,FOLLOW_LCURLY_in_start137); 
            pushFollow(FOLLOW_directives_in_start141);
            ampre=directives();

            state._fsp--;

            match(input,RCURLY,FOLLOW_RCURLY_in_start143); 
            match(input,42,FOLLOW_42_in_start148); 
            match(input,LCURLY,FOLLOW_LCURLY_in_start150); 
            pushFollow(FOLLOW_directives_in_start154);
            post=directives();

            state._fsp--;

            match(input,RCURLY,FOLLOW_RCURLY_in_start156); 

            }


                ctx.setMetamodelName((ext!=null?ext.getText():null).substring(1, (ext!=null?ext.getText():null).length()-1));
                ctx.setAspectModelURI((am!=null?am.getText():null).substring(1, (am!=null?am.getText():null).length()-1));
                ctx.setPrimaryModelURI((pm!=null?pm.getText():null).substring(1, (pm!=null?pm.getText():null).length()-1));
                ctx.setComposedModelURI((cm!=null?cm.getText():null).substring(1, (cm!=null?cm.getText():null).length()-1));
                ctx.getPredirectivesPM().addAll(pmpre);
                ctx.getPredirectivesAM().addAll(ampre);
                ctx.getPostdirectives().addAll(post);
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ctx;
    }
    // $ANTLR end "start"


    // $ANTLR start "directives"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:92:1: directives returns [ArrayList<ElementDirective> lst = new ArrayList<ElementDirective>()] : (d= directive )* ;
    public final ArrayList<ElementDirective> directives() throws RecognitionException {
        ArrayList<ElementDirective> lst =  new ArrayList<ElementDirective>();

        ElementDirective d = null;



            System.out.println("Directives");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:99:3: ( (d= directive )* )
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:100:3: (d= directive )*
            {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:100:3: (d= directive )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==CREATE||(LA3_0>=DESTROY && LA3_0<=MERGE)||(LA3_0>=DOLLAR && LA3_0<=ID)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:100:4: d= directive
            	    {
            	    pushFollow(FOLLOW_directive_in_directives188);
            	    d=directive();

            	    state._fsp--;

            	    lst.add(d);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }


                System.out.println("End Directives");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return lst;
    }
    // $ANTLR end "directives"


    // $ANTLR start "directive"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:103:1: directive returns [ElementDirective d] : ( unaryDirective | binaryDirective );
    public final ElementDirective directive() throws RecognitionException {
        ElementDirective d = null;

        UnaryDirective unaryDirective1 = null;

        BinaryDirective binaryDirective2 = null;



            System.out.println("Directive");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:110:3: ( unaryDirective | binaryDirective )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CREATE||LA4_0==DESTROY) ) {
                alt4=1;
            }
            else if ( (LA4_0==MERGE||(LA4_0>=DOLLAR && LA4_0<=ID)) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:111:3: unaryDirective
                    {
                    pushFollow(FOLLOW_unaryDirective_in_directive221);
                    unaryDirective1=unaryDirective();

                    state._fsp--;

                    d =unaryDirective1;

                    }
                    break;
                case 2 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:111:44: binaryDirective
                    {
                    pushFollow(FOLLOW_binaryDirective_in_directive227);
                    binaryDirective2=binaryDirective();

                    state._fsp--;

                    d =binaryDirective2;

                    }
                    break;

            }

                System.out.println("End Directive");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "directive"


    // $ANTLR start "unaryDirective"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:114:1: unaryDirective returns [UnaryDirective d] : ( createD | destroyD );
    public final UnaryDirective unaryDirective() throws RecognitionException {
        UnaryDirective d = null;

        Create createD3 = null;

        Destroy destroyD4 = null;



            System.out.println("UnaryDirective");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:121:3: ( createD | destroyD )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==CREATE) ) {
                alt5=1;
            }
            else if ( (LA5_0==DESTROY) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:122:3: createD
                    {
                    pushFollow(FOLLOW_createD_in_unaryDirective258);
                    createD3=createD();

                    state._fsp--;

                    d =createD3;

                    }
                    break;
                case 2 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:122:31: destroyD
                    {
                    pushFollow(FOLLOW_destroyD_in_unaryDirective265);
                    destroyD4=destroyD();

                    state._fsp--;

                    d =destroyD4;

                    }
                    break;

            }

                System.out.println("End UnaryDirective");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "unaryDirective"


    // $ANTLR start "binaryDirective"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:125:1: binaryDirective returns [BinaryDirective d] : ( targetD | mergeD );
    public final BinaryDirective binaryDirective() throws RecognitionException {
        BinaryDirective d = null;

        BinaryDirective targetD5 = null;

        Merge mergeD6 = null;



            System.out.println("BinaryDirective");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:132:3: ( targetD | mergeD )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=DOLLAR && LA6_0<=ID)) ) {
                alt6=1;
            }
            else if ( (LA6_0==MERGE) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:133:3: targetD
                    {
                    pushFollow(FOLLOW_targetD_in_binaryDirective297);
                    targetD5=targetD();

                    state._fsp--;

                    d =targetD5;

                    }
                    break;
                case 2 :
                    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:133:31: mergeD
                    {
                    pushFollow(FOLLOW_mergeD_in_binaryDirective304);
                    mergeD6=mergeD();

                    state._fsp--;

                    d =mergeD6;

                    }
                    break;

            }

                System.out.println("End BinaryDirective");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "binaryDirective"


    // $ANTLR start "createD"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:137:1: createD returns [Create d = directives_factory.createCreate()] : CREATE meta= metaRefD AS target= idRefD ;
    public final Create createD() throws RecognitionException {
        Create d =  directives_factory.createCreate();

        MetaRef meta = null;

        IDRef target = null;



            System.out.println("Create");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:145:3: ( CREATE meta= metaRefD AS target= idRefD )
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:146:3: CREATE meta= metaRefD AS target= idRefD
            {
            match(input,CREATE,FOLLOW_CREATE_in_createD336); 
            pushFollow(FOLLOW_metaRefD_in_createD340);
            meta=metaRefD();

            state._fsp--;

            d.setType(meta);
            match(input,AS,FOLLOW_AS_in_createD344); 
            pushFollow(FOLLOW_idRefD_in_createD348);
            target=idRefD();

            state._fsp--;

            d.setTarget(target);

            }


                d.setClassName(meta.getName());
                System.out.println("End Create");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "createD"


    // $ANTLR start "destroyD"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:149:1: destroyD returns [Destroy d = directives_factory.createDestroy()] : DESTROY target= nameRefD ;
    public final Destroy destroyD() throws RecognitionException {
        Destroy d =  directives_factory.createDestroy();

        NameRef target = null;



            System.out.println("Destroy");
          
        try {
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:156:3: ( DESTROY target= nameRefD )
            // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:157:3: DESTROY target= nameRefD
            {
            match(input,DESTROY,FOLLOW_DESTROY_in_destroyD379); 
            pushFollow(FOLLOW_nameRefD_in_destroyD383);
            target=nameRefD();

            state._fsp--;

            d.setTarget(target);

            }


                System.out.println("End Destroy");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "destroyD"


    // $ANTLR start "mergeD"
    // /home/mclavreu/main_workspace/kompose_core_v1/src/kompose_core_v1/parser/Directives.g:161:1: mergeD returns [Merge d = directives_factory.createMerge()] : MERGE LP target= nameRefD COMMA value= nameRefD RP ;
    public final Merge mergeD() throws RecognitionException {
        Merge d =  directives_factory.createMerge();

        NameRef target = null;

        NameRef value = null;


